# poc-shadow-client-private-api

./: Cargo.toml  Cargo.toml.template  Insomnia_2020-02-15.json  README.md  gen-doc.sh
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  config.yml  sane_label.json
.github/workflows/: greetings.yml
.github/workflows.disabled/: generic-checks.yml
docs/: .rustc_info.json  all.html  search-index.js  settings.html  source-files.js
docs/auth/: struct.AuthEnv.html
docs/client/: enum.Status.html  index.html
docs/constants/: constant.DEFAULT_AUTH_ENDPOINT.html  constant.DEFAULT_CUSTOMER_ENDPOINT.html  constant.DEFAULT_DISPATCHER_ENDPOINT.html  constant.DEFAULT_STATUS_ENDPOINT.html
docs/customer/: struct.CustomerEnv.html
docs/debug/.fingerprint/backtrace-763bdf3b9ab3fccf/: lib-backtrace-763bdf3b9ab3fccf  lib-backtrace-763bdf3b9ab3fccf.json
docs/debug/.fingerprint/backtrace-sys-9f2a72ce403851ba/: build-script-build_script_build-9f2a72ce403851ba  build-script-build_script_build-9f2a72ce403851ba.json
docs/debug/.fingerprint/cc-dfa369525f37b22e/: lib-cc-dfa369525f37b22e  (+1 more)
docs/dispatcher/: struct.DispatcherEnv.html
docs/doc/: aliases.js  search-index.js  source-files.js
docs/doc/shadowtech_api/: all.html  index.html  sidebar-items.js
docs/errors/: struct.Error.html  type.Result.html
docs/general/: struct.GeneralEnv.html
docs/log/: sidebar-items.js  struct.LogQuery.html  struct.LogQueryMetadata.html  struct.LogQueryValues.html  trait.ShadowLog.html
docs/shadowtech_api/: index.html  sidebar-items.js
docs/shadowtech_api/auth/: sidebar-items.js
docs/shadowtech_api/client/: sidebar-items.js  struct.InnerResponse.html  struct.Shadow.html  struct.ShadowDynamic.html  trait.ToResp.html  type.Response.html
docs/shadowtech_api/computer/: struct.ComputerEnv.html
docs/shadowtech_api/constants/: constant.DEFAULT_ACCEPT_LANGUAGE.html  constant.DEFAULT_GENERAL_ENDPOINT.html  constant.DEFAULT_SHADOW_AGENT.html  sidebar-items.js
docs/shadowtech_api/customer/: sidebar-items.js
docs/shadowtech_api/dispatcher/: index.html  sidebar-items.js
docs/shadowtech_api/errors/: enum.ErrorKind.html  trait.ResultExt.html
docs/shadowtech_api/log/: index.html  struct.LogEnv.html
docs/shadowtech_api/status/: struct.StatusEnv.html
docs/src/shadowtech_api/: lib.rs.html
docs/status/: sidebar-items.js
examples/: log.rs  start.rs  status.rs
src/: client.rs  constants.rs  errors.rs  lib.rs  macros.rs
src/auth/: mod.rs  post_auth_login.rs
src/auth/control/: mod.rs  post_start.rs
src/computer/: mod.rs  post_start.rs
src/customer/: mod.rs
src/dispatcher/: mod.rs
src/general/: mod.rs
src/log/: mod.rs  queries.rs
src/status/: mod.rs
(+187 files in other folders)
