[package]
name = "shadowtech-api"
version = "0.1.0" # Follow [SemVer 2](https://semver.org/)
authors = ["Johan Planchon <dev@planchon.xyz>"]
edition = "2018"
description = "Library to use to Shadow.tech private API (Fairly small API for the moment)"
publish = false # Change to publish on crates.io

documentation = "https://planchon.xyz/shadow-private-api"
homepage = "https://github.com/joxcat/shadow-private-api"
repository = "https://github.com/joxcat/shadow-private-api"

readme = "./README.md"
license-file = "./LICENSE"

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/joxcat/shadow-private-api" }
is-it-maintained-open-issues = { repository = "https://github.com/joxcat/shadow-private-api" }
# [actively-developed, passively-maintained, as-is,
#   experimental, looking-for-maintainer, deprecated, none]
# ref: https://doc.rust-lang.org/cargo/reference/manifest.html#package-metadata
maintenance = { status = "experimental" }

[lib]
path = "src/lib.rs"
test = true
doctest = false
bench = false
doc = true

# [[bin|example|test|bench]]
# name = ""
# path = ""
# required-features

[features]
logging = []

[dependencies]
base64 = "^0.11"
urlencoding = "^1.0.0"
error-chain = "^0.12.1"
ureq = { version = "^0.11", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
url = "^2.1"
